--- a/gear.ini
+++ b/gear.ini
@@ -1,9 +1,8 @@
 [database]
 user = gear
-password = gearadmin
+password = 
 host = localhost
 name = gear_portal
-;name = gear_gcid_old
 
 [email_sender]
 address = [gear_email]
