--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ www/tests/test_dataset_curator_plotly.py
 www/contact_screenshots/files/*
 www/uploads/files/*
 www/datasets_epigenetic/uploads/files/*
+
+# local directory
+/local/
