--- a/gear.ini
+++ b/gear.ini
@@ -1,8 +1,8 @@
 [database]
-user = gear
+user = dhart
 password = 
 host = localhost
-name = gear_portal
+name = dhart_db
 
 [email_sender]
 address = [gear_email]
@@ -10,9 +10,8 @@ password = [pass]
 
 [test]
 host = http://localhost/
-user_name = Gear Tester
-;; e-mail can be fake
-user_email = testing@testgear.org
-user_institution = Institute of Things Not Breaking
-password = t3stingisg00d
+user_name = test
+user_email = user@test.org
+user_institution = Institution
+password = Shnsv2Ak8HfB
 
