FIX email reset

--- a/gear.ini
+++ b/gear.ini
@@ -5,8 +5,8 @@ host = localhost
 name = dhart_db
 
 [email_sender]
-address = [gear_email]
-password = [pass]
+address = noreply.dhart@dieterichlab.org
+password = 
 
 [test]
 host = http://localhost/
