FIX post request using GraphQL API

--- a/gear.ini
+++ b/gear.ini
@@ -8,6 +8,18 @@ name = dhart_db
 address = noreply.dhart@dieterichlab.org
 password = 
 
+# to create issues on GitHub via POST
+[contact_form] 
+repo_owner = dieterich-lab
+public_repo = gEAR
+private_repo = dhart-issues
+# project ids as obtained from projectsV2 GraphQL API
+public_project = PVT_kwDOAHaDi84AECnm
+private_project = PVT_kwDOAHaDi84AEEoY
+domain_url = https://dhart.dieterichlab.org
+# must be a valid GitHub account
+assignee = eboileau
+
 [test]
 host = http://localhost/
 user_name = test
