necessary changes for local VM

--- a/gear.ini
+++ b/gear.ini
@@ -14,9 +14,9 @@ repo_owner = dieterich-lab
 public_repo = gEAR
 private_repo = dhart-issues
 # project ids as obtained from projectsV2 GraphQL API
-public_project = PVT_kwDOAHaDi84AECnm
-private_project = PVT_kwDOAHaDi84AEEoY
-domain_url = https://dhart.dieterichlab.org
+#public_project = PVT_kwDOAHaDi84AECnm
+#private_project = PVT_kwDOAHaDi84AEEoY
+domain_url = https://www.helmholtz-munich.de/icb/research/groups/heinig-lab
 # must be a valid GitHub account
 assignee = eboileau
 
