debian wsl config

--- a/gear.ini
+++ b/gear.ini
@@ -16,7 +16,7 @@ private_repo = dhart-issues
 # project ids as obtained from projectsV2 GraphQL API
 #public_project = PVT_kwDOAHaDi84AECnm
 #private_project = PVT_kwDOAHaDi84AEEoY
-domain_url = https://www.helmholtz-munich.de/icb/research/groups/heinig-lab
+domain_url = https://dhart.dieterichlab.org
 # must be a valid GitHub account
 assignee = eboileau
 
